@@ -13,7 +13,7 @@ around _generate_BUILDALL => sub {
     my $source = $self->$orig();
     $source .= ";\n" if $source;
 
-    my @attrs = '__INSTANCE__ => 1,';
+    my @attrs = ('__INSTANCE__ => 1,','__no_BUILD__ => 1,');
     push @attrs, map { B::perlstring($_) . ' => 1,' }
         grep { defined }
         map  { $_->init_arg() } @{ $self->_attributes() };
